Add authorization and tests for authorization.

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
       <version>${google-gson.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.13.4</version>
+    </dependency>
+
   </dependencies>
   <build>
     <testSourceDirectory>src/test/java</testSourceDirectory>
