--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,11 +26,16 @@ spring:
     format:
       date: iso
       date-time: iso
-    pathmatch:
+    path match:
       matching-strategy: ant_path_matcher
-  # FIXME: remove after auth implementation
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server:
   servlet:
     context-path: /api
+# FIXME: just example
+defaultCredentials:
+  admin:
+    login: ${ADMIN_LOGIN_BOOKS_CATALOG}
+    password: ${ADMIN_PASSWORD_BOOKS_CATALOG}
+  user:
+    login: ${USER_LOGIN_BOOKS_CATALOG}
+    password: ${USER_PASSWORD_BOOKS_CATALOG}
