--- a/src/test/resources/application-it.yml
+++ b/src/test/resources/application-it.yml
@@ -23,11 +23,16 @@ spring:
     format:
       date: iso
       date-time: iso
-    pathmatch:
+    path match:
       matching-strategy: ant_path_matcher
-  # FIXME: remove after auth implementation
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 server:
   servlet:
     context-path: /api
+# FIXME: just example
+defaultCredentials:
+  admin:
+    login: admin
+    password: Admin!123
+  user:
+    login: user
+    password: Password!123
