--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -6,7 +6,7 @@ spring:
   mvc:
     path match:
       matching-strategy: ant_path_matcher
-# FIXME: just example
+# FIXME: just example. Normally credentials should no be here.
 defaultCredentials:
   admin:
     login: admin
